vendor/ocaml/testsuite/tests/typing-objects/pr6123_bad.ml.reference

#                                             Characters 253-257:
        let args = List.map (fun ty -> new argument(self, ty)) args_ty in
                                                    ^^^^
Error: This expression has type < arguments : 'a; .. >
       but an expression was expected of type 'b
       Self type cannot escape its class
# 
